cabal-version: 2.2

name: examples
version: 0
build-type: Simple

common common
    build-depends:
        -- global
        base,
        -- project
        ron,
        ron-rdt,
        ron-schema,
        ron-storage
    default-language: Haskell2010

executable TypicalUsage
    import: common
    main-is: TypicalUsage.lhs

executable Rocks
    import: common
    main-is: Rocks.lhs
